2009-06-17  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (stemDoc): Fix character(0) handling.

2009-06-12  Ingo Feinerer  <feinerer@logic.at>

	* R/doc.R (show): Pretty print.

2009-05-27  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (print.TermDocumentMatrix): Handle empty matrices
	gracefully.

2009-05-13  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R: Make corpus virtual. Implement corpus with standard
	and permanent storage semantics.

	* DESCRIPTION: New major release. A *lot* of improvements.

2009-05-04   Ingo Feinerer <feinerer@logic.at>

	* NAMESPACE: Export some simple_triplet_matrix functions.

2009-04-28   Ingo Feinerer <feinerer@logic.at>

	* R/weight.R: Adapt tf-idf to new matrix format.

2009-04-27  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R: Create two distinct classes for term-document and
	document-term matrices.

2009-04-26  Ingo Feinerer  <feinerer@logic.at>

	* R/termdocmatrix.R: No longer use Matrix package. This reduces
	package start-up time significantly.

2009-04-11  Ingo Feinerer  <feinerer@logic.at>

	* inst/doc/tm.Rnw: Fix code/documentation mismatch.

2009-04-04  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (tmReduce): Combine multiple maps into one
	transformation.

2009-04-03  Ingo Feinerer  <feinerer@logic.at>

	* R/weight.R: Remove weightLogical since it does not return a
	dgCMatrix.

	* R/termdocmatrix.R: Removed TermDocMatrix. Use DocumentTermMatrix
	or TermDocumentMatrix instead.

2009-03-28  Ingo Feinerer  <feinerer@logic.at>

	* inst/doc/extensions.Rnw: Finished vignette.

2009-03-27  Ingo Feinerer  <feinerer@logic.at>

	* R/termdocmatrix.R: Start to work on new TermDocumentMatrix and
	DocumentTermMatrix representations.

2009-03-23  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readXML): New reader for arbitrary XML files.

2009-03-22  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (CSVSource): Defunct (use DataframeSource instead).